Ajouté transition dans lorsque les pages load, ajouté une fonction de panier a selection de produits

--- a/Pages HTML/Mission_Histoire.html
+++ b/Pages HTML/Mission_Histoire.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Totoko's Temptations</title> <!-- Titre de la page -->
     <link rel="stylesheet" href="../CSS/css_histoire.css"> <!-- Liaison vers la feuille de style CSS -->
+    <script src="../Script/Script_Mission_Histoire.js"></script>
 </head>
 
 <body>
