--- a/Pages HTML/Selection_Produit.html
+++ b/Pages HTML/Selection_Produit.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Totoko's Temptations</title>
     <link rel="stylesheet" href="../CSS/css_selection.css"> <!-- Lien vers la feuille de style CSS -->
+    <script src="../Script/Script_Selection.js"></script>
 </head>
 
 <body>
@@ -43,6 +44,7 @@
                 <div class="selection">
                     <!-- Titre de la sélection de produits -->
                     <h2>Notre sélection de produits</h2>
+                    <h3 id="totalPanier" >Total du panier : $0</h3>
                     <!-- Section des viennoiseries -->
                     <h3 id="viennoiseries" name="viennoiseries">Nos viennoiseries</h3>
                     <div class="produits">
