Changé certains noms de fichier, arrangé beaucoup de petites choses

--- a/Pages HTML/Formulaire_Membre.html
+++ b/Pages HTML/Formulaire_Membre.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Totoko's Temptations</title>
     <link rel="stylesheet" href="../CSS/css_formulaire_m.css"> <!-- Lien vers la feuille de style CSS -->
-    <script src="../Script/Validation_Formulaire_Membre.js"></script>
+    <script src="../Script/Script_Formulaire_Membre.js"></script>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
                     <div class="logo">
                         <img src="../Images/Totokos.Temptations.Logo.Website.png" width="50px" alt="Logo">Totoko's Temptations</div>
                     <!-- Navigation -->
-                    <nav>
+                    <nav aria-label="Navigation haut de page">
                         <ul>
                             <!-- Liens de navigation -->
                             <li><a href="./Accueil_Boulangerie.html">Accueil</a></li>
@@ -33,6 +33,7 @@
                             <li><a href="./Formulaire_Membre.html">Inscription</a></li>
                             <li><a href="./Mission_Histoire.html">Notre mission &amp; histoire</a></li>
                             <li><a href="./Notre_Equipe.html">Notre équipe</a></li>
+                            <li><a href="./Animation.html">Jouez au jeu!</a></li>
                             <li><a href="./Formulaire_Communication.html">Contactez-nous</a></li>
                         </ul>
                     </nav>
@@ -123,7 +124,7 @@
             <!-- Pied de page -->
             <footer>
                 <div class="bas_de_page">
-                    <nav>
+                    <nav aria-label="Navigation bas de page">
                         <ul>
                             <!-- Liens de navigation du pied de page -->
                             <li><a href="https://github.com/calebk5/Web-Client">Visitez notre répertoire GitHub en cliquant ici</a></li>
@@ -134,6 +135,7 @@
                             <li><a href="./Mission_Histoire.html">Notre mission &amp; histoire</a></li>
                             <li><a href="./Notre_Equipe.html">Notre équipe</a></li>
                             <li><a href="./Formulaire_Communication.html">Contactez-nous</a></li>
+                            <li><a href="./Animation.html">Jouez au jeu!</a></li>
                             <li>Date de création : 9 mars 2024</li>
                             <li>©Totoko &amp; Family</li>
                         </ul>
