--- a/Pages HTML/Formulaire_Communication.html
+++ b/Pages HTML/Formulaire_Communication.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Totoko's Temptations</title>
     <link rel="stylesheet" href="../CSS/css_formulaire_c.css">
-    <script src="../Script/Validation_Formulaire_Communication.js"></script>
+    <script src="../Script/Script_Formulaire_Communication.js"></script>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
                         <img src="../Images/Totokos.Temptations.Logo.Website.png" width="50px" alt="Logo">Totoko's Temptations
                     </div>
                     <!-- Navigation -->
-                    <nav>
+                    <nav aria-label="Navigation haut de page">
                         <ul>
                             <li><a href="./Accueil_Boulangerie.html">Accueil</a></li>
                             <li>
@@ -33,6 +33,7 @@
                             <li><a href="./Formulaire_Membre.html">Inscription</a></li>
                             <li><a href="./Mission_Histoire.html">Notre mission &amp; histoire</a></li>
                             <li><a href="./Notre_Equipe.html">Notre équipe</a></li>
+                            <li><a href="./Animation.html">Jouez au jeu!</a></li>
                             <li><a href="./Formulaire_Communication.html">Contactez-nous</a></li>
                         </ul>
                     </nav>
@@ -100,7 +101,7 @@
             <!-- Pied de page -->
             <footer>
                 <div class="bas_de_page">
-                    <nav>
+                    <nav aria-label="Navigation bas de page">
                         <ul>
                             <li><a href="https://github.com/calebk5/Web-Client">Visitez notre répertoire GitHub en cliquant ici</a></li>
                             <li>Téléphonez-nous au : <a href="tel:819-123-1234">819&#8209;123&#8209;1234</a></li>
@@ -110,6 +111,7 @@
                             <li><a href="./Mission_Histoire.html">Notre mission &amp; histoire</a></li>
                             <li><a href="./Notre_Equipe.html">Notre équipe</a></li>
                             <li><a href="./Formulaire_Communication.html">Contactez-nous</a></li>
+                            <li><a href="./Animation.html">Jouez au jeu!</a></li>
                             <li>Date de création : 9 mars 2024</li>
                             <li>©Totoko &amp; Family</li>
                         </ul>
