--- a/Pages HTML/Selection_Produit.html
+++ b/Pages HTML/Selection_Produit.html
@@ -18,7 +18,7 @@
                 <div class="haut_de_page">
                     <!-- Logo et navigation -->
                     <div class="logo"><img src="../Images/Totokos.Temptations.Logo.Website.png" width="50px" alt="Logo">Totoko's Temptations</div>
-                    <nav>
+                    <nav aria-label="Navigation haut de page">
                         <ul>
                             <!-- Liens de navigation -->
                             <li><a href="./Accueil_Boulangerie.html">Accueil</a></li>
@@ -33,6 +33,7 @@
                             <li><a href="./Formulaire_Membre.html">Inscription</a></li>
                             <li><a href="./Mission_Histoire.html">Notre mission &amp; histoire</a></li>
                             <li><a href="./Notre_Equipe.html">Notre équipe</a></li>
+                            <li><a href="./Animation.html">Jouez au jeu!</a></li>
                             <li><a href="#">Contactez-nous</a></li>
                         </ul>
                     </nav>
@@ -143,7 +144,7 @@
         <!-- Pied de page -->
         <footer>
             <div class="bas_de_page">
-                <nav>
+                <nav aria-label="Navigation bas de page">
                     <ul>
                         <!-- Liens de navigation du pied de page -->
                         <li><a href="https://github.com/calebk5/Web-Client">Visitez notre répertoire GitHub en cliquant ici</a></li>
@@ -154,6 +155,7 @@
                         <li><a href="./Mission_Histoire.html">Notre mission &amp; histoire</a></li>
                         <li><a href="./Notre_Equipe.html">Notre équipe</a></li>
                         <li><a href="./Formulaire_Communication.html">Contactez-nous</a></li>
+                        <li><a href="./Animation.html">Jouez au jeu!</a></li>
                         <li>Date de création : 9 mars 2024</li>
                         <li>©Totoko &amp; Family</li>
                     </ul>
