Media queries ajouter et modifications CSS avec besoin

--- a/Pages HTML/Mission_Histoire.html
+++ b/Pages HTML/Mission_Histoire.html
@@ -18,6 +18,11 @@
                 <div class="haut_de_page">
                     <!-- Logo et navigation -->
                     <div class="logo"><img src="../Images/Totokos.Temptations.Logo.Website.png" width="50px" alt="Logo">Totoko's Temptations</div>
+                    <div class="hamburger">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
                     <nav>
                         <ul>
                             <!-- Liens de navigation -->
@@ -40,7 +45,7 @@
             </header>
 
             <!-- Contenu principal de la page -->
-            <main>
+            <main class="main-h">
                 <!-- Section du titre -->
                 <section class="titre">
                     <div>
