--- a/Pages HTML/Notre_Equipe.html
+++ b/Pages HTML/Notre_Equipe.html
@@ -16,12 +16,15 @@
                 <div class="haut_de_page">
                     <!-- Logo et navigation -->
                     <div class="logo"><img src="../Images/Totokos.Temptations.Logo.Website.png" width="50px" alt="Logo">Totoko's Temptations</div>
+                    <div class="hamburger">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
                     <nav>
                         <ul>
-
                             <li><a href="./Accueil_Boulangerie.html">Accueil</a></li>
                             <li><a href="./Selection_Produit.html">Sélection de produits</a>
-                                <!-- Sous-menu de sélection de produits -->
                                 <ul class="sous-menu">
                                     <li><a href="./Selection_Produit.html#viennoiseries">Viennoiserie</a></li>
                                     <li><a href="./Selection_Produit.html#pains">Pains délicieux</a></li>
@@ -34,11 +37,12 @@
                             <li><a href="./Formulaire_Communication.html">Contactez-nous</a></li>
                         </ul>
                     </nav>
+                    
                 </div>
             </header>
 
             <!-- Contenu principal de la page -->
-            <main>
+            <main class="main-e">
                 <div class="titres">
                     <h1 class="Notre_equipe1">Notre Equipe</h1>
                 </div>
@@ -163,3 +167,4 @@
 </body>
 
 </html>
+
