--- a/Pages HTML/Selection_Produit.html
+++ b/Pages HTML/Selection_Produit.html
@@ -33,14 +33,14 @@
                             <li><a href="./Formulaire_Membre.html">Inscription</a></li>
                             <li><a href="./Mission_Histoire.html">Notre mission &amp; histoire</a></li>
                             <li><a href="./Notre_Equipe.html">Notre équipe</a></li>
-                            <li><a href="#">Contactez-nous</a></li>
+                            <li><a href="./Formulaire_Communication.html">Contactez-nous</a></li>
                         </ul>
                     </nav>
                 </div>
             </header>
 
             <!-- Contenu principal de la page -->
-            <main>
+            <main class="main-s">
                 <div class="selection">
                     <!-- Titre de la sélection de produits -->
                     <h2>Notre sélection de produits</h2>
