Arrangé nav et hamburger

--- a/Pages HTML/Formulaire_Communication.html
+++ b/Pages HTML/Formulaire_Communication.html
@@ -18,6 +18,11 @@
                     <div class="logo">
                         <img src="../Images/Totokos.Temptations.Logo.Website.png" width="50px" alt="Logo">Totoko's Temptations
                     </div>
+                    <div class="hamburger">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
                     <!-- Navigation -->
                     <nav aria-label="Navigation haut de page">
                         <ul>
