--- a/Pages HTML/Formulaire_Membre.html
+++ b/Pages HTML/Formulaire_Membre.html
@@ -17,6 +17,11 @@
                 <div class="haut_de_page">
                     <div class="logo">
                         <img src="../Images/Totokos.Temptations.Logo.Website.png" width="50px" alt="Logo">Totoko's Temptations</div>
+                    <div class="hamburger">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
                     <!-- Navigation -->
                     <nav aria-label="Navigation haut de page">
                         <ul>
