--- a/Pages HTML/Notre_Equipe.html
+++ b/Pages HTML/Notre_Equipe.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Totoko's Temptations</title> <!-- Titre de la page -->
     <link rel="stylesheet" href="../CSS/css_equipe.css"> <!-- Liaison vers la feuille de style CSS -->
+    <script src="../Script/Script_Equipe.js"></script>
 </head>
 
 <body>
@@ -38,7 +39,6 @@
                             <li><a href="./Formulaire_Communication.html">Contactez-nous</a></li>
                         </ul>
                     </nav>
-                    
                 </div>
             </header>
 
