--- a/Pages HTML/Animation.html
+++ b/Pages HTML/Animation.html
@@ -18,6 +18,11 @@
                 <div class="haut_de_page">
                     <!-- Logo et navigation -->
                     <div class="logo"><img src="../Images/Totokos.Temptations.Logo.Website.png" width="50px" alt="Logo">Totoko's Temptations</div>
+                    <div class="hamburger">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
                     <nav aria-label="Navigation haut de page">
                         <ul>
                             <!-- Liens de navigation -->
