--- a/Pages HTML/Animation.html
+++ b/Pages HTML/Animation.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="fr"> <!-- Langue définie comme français -->
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tristan</title>
+    <title>Totoko's Temptations</title>
     <link rel="stylesheet" href="../CSS/css_animation.css">
     <script src="../Script/Script_Animation.js"></script>
 </head>
 
 <body>
-    <!-- Conteneur de la page pour la mise en page -->
+    <!-- Conteneur principal de la page -->
     <div id="page-container">
         <div id="content-wrap">
             <!-- En-tête de la page -->
@@ -18,15 +18,17 @@
                 <div class="haut_de_page">
                     <!-- Logo et navigation -->
                     <div class="logo"><img src="../Images/Totokos.Temptations.Logo.Website.png" width="50px" alt="Logo">Totoko's Temptations</div>
+                    <!-- Menu hamburger -->
                     <div class="hamburger">
                         <div></div>
                         <div></div>
                         <div></div>
                     </div>
+                    <!-- Navigation -->
                     <nav aria-label="Navigation haut de page">
                         <ul>
                             <!-- Liens de navigation -->
-                            <li><a href="./Accueil_Boulangerie.html">Accueil</a></li>
+                            <li><a href="../Accueil_Boulangerie.html">Accueil</a></li>
                             <li><a href="./Selection_Produit.html">Sélection de produits</a>
                                 <!-- Sous-menu de sélection de produits -->
                                 <ul class="sous-menu">
@@ -88,9 +90,9 @@
                 <nav aria-label="Navigation bas de page">
                     <ul>
                         <!-- Liens de navigation du pied de page -->
-                        <li><a href="https://github.com/calebk5/Web-Client">Visitez notre répertoire GitHub en cliquant ici</a></li>
+                        <li><a href="https://github.com/calebk5/Web-Client-UA3">Visitez notre répertoire GitHub en cliquant ici</a></li>
                         <li>Téléphonez-nous au : <a href="tel:819-123-1234">819&#8209;123&#8209;1234</a></li>
-                        <li><a href="./Accueil_Boulangerie.html">Accueil</a></li>
+                        <li><a href="../Accueil_Boulangerie.html">Accueil</a></li>
                         <li><a href="./Selection_Produit.html">Sélection de produits</a></li>
                         <li><a href="./Formulaire_Membre.html">Inscription</a></li>
                         <li><a href="./Mission_Histoire.html">Notre mission &amp; histoire</a></li>
