--- a/Pages HTML/Selection_Produit.html
+++ b/Pages HTML/Selection_Produit.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Totoko's Temptations</title>
-    <link rel="stylesheet" href="../CSS/css_selection.css"> <!-- Lien vers la feuille de style CSS -->
+    <link rel="stylesheet" href="../CSS/css_selection.css">
     <script src="../Script/Script_Selection.js"></script>
 </head>
 
@@ -18,15 +18,17 @@
                 <div class="haut_de_page">
                     <!-- Logo et navigation -->
                     <div class="logo"><img src="../Images/Totokos.Temptations.Logo.Website.png" width="50px" alt="Logo">Totoko's Temptations</div>
+                    <!-- Menu hamburger -->
                     <div class="hamburger">
                         <div></div>
                         <div></div>
                         <div></div>
                     </div>
+                    <!-- Navigation -->
                     <nav aria-label="Navigation haut de page">
                         <ul>
                             <!-- Liens de navigation -->
-                            <li><a href="./Accueil_Boulangerie.html">Accueil</a></li>
+                            <li><a href="../Accueil_Boulangerie.html">Accueil</a></li>
                             <li><a href="./Selection_Produit.html">Sélection de produits</a>
                                 <!-- Sous-menu de sélection de produits -->
                                 <ul class="sous-menu">
@@ -38,8 +40,8 @@
                             <li><a href="./Formulaire_Membre.html">Inscription</a></li>
                             <li><a href="./Mission_Histoire.html">Notre mission &amp; histoire</a></li>
                             <li><a href="./Notre_Equipe.html">Notre équipe</a></li>
-                            <li><a href="./Formulaire_Communication.html">Contactez-nous</a></li>
                             <li><a href="./Animation.html">Jouez au jeu!</a></li>
+                            <li><a href="./Formulaire_Communication.html">Contactez-nous</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -50,11 +52,12 @@
                 <div class="selection">
                     <!-- Titre de la sélection de produits -->
                     <h2>Notre sélection de produits</h2>
+                    <!-- Total du panier -->
                     <h3 id="totalPanier" >Total du panier : $0</h3>
                     <!-- Section des viennoiseries -->
                     <h3 id="viennoiseries" name="viennoiseries">Nos viennoiseries</h3>
                     <div class="produits">
-                        <!-- Produits individuels -->
+
                         <div class="panneau">
                             <img src="../Images/Images_selection/Croissant aux amandes.jpg" alt="Croissant aux amandes">
                             <h1>Croissant aux amandes</h1>
@@ -152,9 +155,9 @@
                 <nav aria-label="Navigation bas de page">
                     <ul>
                         <!-- Liens de navigation du pied de page -->
-                        <li><a href="https://github.com/calebk5/Web-Client">Visitez notre répertoire GitHub en cliquant ici</a></li>
+                        <li><a href="https://github.com/calebk5/Web-Client-UA3">Visitez notre répertoire GitHub en cliquant ici</a></li>
                         <li>Téléphonez-nous au : <a href="tel:819-123-1234">819&#8209;123&#8209;1234</a></li>
-                        <li><a href="./Accueil_Boulangerie.html">Accueil</a></li>
+                        <li><a href="../Accueil_Boulangerie.html">Accueil</a></li>
                         <li><a href="./Selection_Produit.html">Sélection de produits</a></li>
                         <li><a href="./Formulaire_Membre.html">Inscription</a></li>
                         <li><a href="./Mission_Histoire.html">Notre mission &amp; histoire</a></li>
