--- a/Pages HTML/Formulaire_Membre.html
+++ b/Pages HTML/Formulaire_Membre.html
@@ -5,18 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Totoko's Temptations</title>
-    <link rel="stylesheet" href="../CSS/css_formulaire_m.css"> <!-- Lien vers la feuille de style CSS -->
+    <link rel="stylesheet" href="../CSS/css_formulaire_m.css">
     <script src="../Script/Script_Formulaire_Membre.js"></script>
 </head>
 
 <body>
+    <!-- Conteneur principal de la page -->
     <div id="page-container">
         <div id="content-wrap">
             <!-- En-tête -->
             <header>
                 <div class="haut_de_page">
-                    <div class="logo">
-                        <img src="../Images/Totokos.Temptations.Logo.Website.png" width="50px" alt="Logo">Totoko's Temptations</div>
+                    <!-- Logo et navigation -->
+                    <div class="logo"><img src="../Images/Totokos.Temptations.Logo.Website.png" width="50px" alt="Logo">Totoko's Temptations</div>
+                    <!-- Menu hamburger -->
                     <div class="hamburger">
                         <div></div>
                         <div></div>
@@ -26,7 +28,7 @@
                     <nav aria-label="Navigation haut de page">
                         <ul>
                             <!-- Liens de navigation -->
-                            <li><a href="./Accueil_Boulangerie.html">Accueil</a></li>
+                            <li><a href="../Accueil_Boulangerie.html">Accueil</a></li>
                             <li><a href="./Selection_Produit.html">Sélection de produits</a>
                                 <!-- Sous-menu de sélection de produits -->
                                 <ul class="sous-menu">
@@ -44,6 +46,7 @@
                     </nav>
                 </div>
             </header>
+
             <!-- Contenu principal -->
             <main>
                 <div class="content">
@@ -132,9 +135,9 @@
                     <nav aria-label="Navigation bas de page">
                         <ul>
                             <!-- Liens de navigation du pied de page -->
-                            <li><a href="https://github.com/calebk5/Web-Client">Visitez notre répertoire GitHub en cliquant ici</a></li>
+                            <li><a href="https://github.com/calebk5/Web-Client-UA3">Visitez notre répertoire GitHub en cliquant ici</a></li>
                             <li>Téléphonez-nous au : <a href="tel:819-123-1234">819&#8209;123&#8209;1234</a></li>
-                            <li><a href="./Accueil_Boulangerie.html">Accueil</a></li>
+                            <li><a href="../Accueil_Boulangerie.html">Accueil</a></li>
                             <li><a href="./Selection_Produit.html">Sélection de produits</a></li>
                             <li><a href="./Formulaire_Membre.html">Inscription</a></li>
                             <li><a href="./Mission_Histoire.html">Notre mission &amp; histoire</a></li>
