--- a/Pages HTML/Notre_Equipe.html
+++ b/Pages HTML/Notre_Equipe.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="fr"> <!-- Langue définie comme français -->
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Totoko's Temptations</title> <!-- Titre de la page -->
-    <link rel="stylesheet" href="../CSS/css_equipe.css"> <!-- Liaison vers la feuille de style CSS -->
+    <title>Totoko's Temptations</title>
+    <link rel="stylesheet" href="../CSS/css_equipe.css">
     <script src="../Script/Script_Equipe.js"></script>
 </head>
 
 <body>
+    <!-- Conteneur principal de la page -->
     <div id="page-container">
         <div id="content-wrap">
             <!-- En-tête de la page -->
@@ -17,15 +18,19 @@
                 <div class="haut_de_page">
                     <!-- Logo et navigation -->
                     <div class="logo"><img src="../Images/Totokos.Temptations.Logo.Website.png" width="50px" alt="Logo">Totoko's Temptations</div>
+                    <!-- Menu hamburger -->
                     <div class="hamburger">
                         <div></div>
                         <div></div>
                         <div></div>
                     </div>
+                    <!-- Navigation -->
                     <nav aria-label="Navigation haut de page">
                         <ul>
-                            <li><a href="./Accueil_Boulangerie.html">Accueil</a></li>
+                            <!-- Liens de navigation -->
+                            <li><a href="../Accueil_Boulangerie.html">Accueil</a></li>
                             <li><a href="./Selection_Produit.html">Sélection de produits</a>
+                                <!-- Sous-menu de sélection de produits -->
                                 <ul class="sous-menu">
                                     <li><a href="./Selection_Produit.html#viennoiseries">Viennoiserie</a></li>
                                     <li><a href="./Selection_Produit.html#pains">Pains délicieux</a></li>
@@ -150,9 +155,9 @@
                 <nav aria-label="Navigation bas de page">
                     <ul>
                         <!-- Liens de navigation du pied de page -->
-                        <li><a href="https://github.com/calebk5/Web-Client">Visitez notre répertoire GitHub en cliquant ici</a></li>
+                        <li><a href="https://github.com/calebk5/Web-Client-UA3">Visitez notre répertoire GitHub en cliquant ici</a></li>
                         <li>Téléphonez-nous au : <a href="tel:819-123-1234">819&#8209;123&#8209;1234</a></li>
-                        <li><a href="./Accueil_Boulangerie.html">Accueil</a></li>
+                        <li><a href="../Accueil_Boulangerie.html">Accueil</a></li>
                         <li><a href="./Selection_Produit.html">Sélection de produits</a></li>
                         <li><a href="./Formulaire_Membre.html">Inscription</a></li>
                         <li><a href="./Mission_Histoire.html">Notre mission &amp; histoire</a></li>
